# itaca

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: api-designer.md  architect-reviewer.md  incident-analyst.md  qa-engineer.md  tech-writer.md  vv-engineer.md
.claude/hooks/: role_review_gate.py  write_attestation.py
.claude/skills/role-review/: ROLE_TEMPLATE.md  SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: DECISIONS.md  M0_EXECUTION_PLAN.md  M1_EXECUTION_PLAN.md  OPEN_QUESTIONS.md  PYFLIGHTSTREAM_ADOPTIONS.md  SISTER_PYFLIGHTSTREAM.md
docs/derivations/: uncertainty_kernels.md
docs/srs/: README.md  main.tex  sample.bib
docs/srs/chapters/: 01_introduction.tex  02_philosophy.tex  03_scope.tex  04_data_model.tex  05_architecture.tex  06_functional_requirements.tex  07_non_functional_requirements.tex  08_standards_alignment.tex  09_contributing.tex  10_roadmap.tex  11_changelog.tex
docs/srs/frontmatter/: acronyms.tex  glossary.tex  revision_history.tex
examples/: README.md  pipeline_reuse.py  wt_campaign.py
itaca/: __init__.py
itaca/core/: __init__.py  accessors.py  arithmetic.py  axes.py  combine.py  coords.py  correlation.py  dimension.py  errors.py  history.py  historyframe.py  pipeline.py  provenance.py  sentinels.py  uncframe.py  varframe.py  variable.py  version.py
itaca/io/: __init__.py  diagnostics.py  export.py  inspector.py  loader.py  manifest.py  pivot.py  summary.py
itaca/io/formats/: __init__.py  itc.py
itaca/ops/: __init__.py  _content.py  _interp_kernels.py  _movingfit.py  _reduction.py  average.py  compute.py  concat.py  diff.py  expand.py  fill.py  fitmodel.py  integrate.py  interpolate.py  moments.py  rotate.py  select.py  smooth.py  squeeze.py
itaca/uncertainty/: __init__.py  assign.py  expression.py  operators.py  propagation.py
itaca/utils/: __init__.py  units.py  validation.py
tests/: conftest.py  test_errors.py  test_house_style.py  test_import_policy.py  test_package.py  test_push_gate.py  test_release_hardening.py  test_review_gate.py  test_tooling_config.py
tests/core/: test_accessors.py  test_axes.py  test_axes_registry_integration.py  test_combine.py  test_dimension_variable.py  test_hash_properties.py  test_history_and_hash.py  test_mirror_frames.py  test_pipeline.py  test_provenance_modes.py  test_sentinels.py  test_varframe.py
tests/derivations/: test_kernel_derivations.py
tests/io/: test_export.py  test_inspection.py  test_itc_roundtrip.py  test_load_files.py  test_load_memory.py  test_pivot.py
tests/ops/: test_at_squeeze.py  test_average.py  test_compute.py  test_concat.py  test_diff.py  test_expand.py  test_fill.py  test_fitmodel.py  test_immutability.py  test_integrate.py  test_interpolate.py  test_kernel_properties.py  test_rotate.py  test_select.py  test_smooth.py  test_translate_moments.py
tests/oracle/: test_axes_oracle.py
tests/typing/: sentinel_narrowing.py
tests/uncertainty/: test_assign.py  test_expression.py  test_operators.py  test_propagation.py
tests/utils/: test_units.py
