[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "itaca"
description = "Integrated Toolkit for Aerospace Computation and Analysis: rigorous engineering data management, analysis, and computation"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Geovana Neves" }]
keywords = [
    "aerospace",
    "data-management",
    "uncertainty",
    "GUM",
    "provenance",
    "wind-tunnel",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.26,<3.0"]
dynamic = ["version"]

[project.optional-dependencies]
pandas = ["pandas>=2.1,<3.0"]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "hypothesis>=6.100,<7.0",
    # Exact pin, bumped deliberately: ruff is the one tool whose version
    # is declared twice, because ruff-pre-commit builds an isolated hook
    # environment, while the mypy and pytest hooks are language: system
    # and inherit whatever this extra installed. A range here let CI and
    # the hook run different rule sets (REQ-96). To bump: move this pin
    # and the ruff rev in .pre-commit-config.yaml, which carries a
    # leading v (rev: vX.Y.Z), in one commit; reinstall with
    # pip install -e ".[dev]" so this environment moves too (pre-commit
    # rebuilds its own hook environment); then run ruff check . and
    # ruff format --check . over the repo and fix what the new rules
    # surface.
    # tests/test_tooling_config.py fails if the two ever drift apart.
    "ruff==0.15.22",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<5.0",
    # Dev-only test oracle for the direction-cosine geometry (DD-26);
    # scipy is never a runtime dependency and is barred from library
    # code by the NumPy-only import policy.
    "scipy>=1.11,<2.0",
]

[tool.setuptools.packages.find]
include = ["itaca*"]

[tool.setuptools.dynamic]
version = { attr = "itaca.core.version.__version__" }

# -----------------------------------------------------------------------------
# ruff: linting and formatting (REQ-80), import policy (REQ-82, DD-02)
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py310"
# Forward-looking: Markdown formatting is preview-only in the pinned
# ruff, so this excludes nothing today. It keeps the formatter's scope
# stable when that graduates, since .md files here are prose and
# illustrative samples, not sources the formatter owns. Revisit if
# Markdown code blocks are ever collected as doctests, which nothing
# in this repository does today.
extend-exclude = ["*.md"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TID", "RUF", "D"]
# D105: magic-method docstrings add noise; their contracts are canonical.
ignore = ["D105"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"xarray".msg = "NumPy-only rule (REQ-82, DD-02): xarray is barred from core/, ops/, and uncertainty/"
"dask".msg = "NumPy-only rule (REQ-82, DD-02): dask is barred from core/, ops/, and uncertainty/"
"pandas".msg = "NumPy-only rule (REQ-82, DD-02): pandas is barred from core/, ops/, and uncertainty/; io/ uses it lazily"
"scipy".msg = "Dev-only geometry oracle (DD-26): scipy is barred from library code; use it only under tests/oracle/"
"uncertainties".msg = "Dev-only GUM oracle (DD-25): uncertainties is barred from library code; use it only under tests/oracle/"

[tool.ruff.lint.per-file-ignores]
# The NumPy-only ban targets core/, ops/, and uncertainty/ (REQ-82).
# io/ and utils/ may use pandas lazily (REQ-05, REQ-84); tests may use anything.
"itaca/io/**" = ["TID251"]
"itaca/utils/**" = ["TID251"]
"tests/**" = ["TID251", "D"]

# -----------------------------------------------------------------------------
# mypy: strict typing on the public API (REQ-78)
# -----------------------------------------------------------------------------

[tool.mypy]
# No python_version pin: NumPy 2.x stubs need the 3.12 grammar. The
# 3.10 floor is exercised by the CI test matrix (REQ-83), not by mypy.
strict = true
files = ["itaca"]

[[tool.mypy.overrides]]
# pandas is an optional, lazily imported bridge (REQ-84); its stubs
# are not a dependency.
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# pytest and coverage: 90 percent hard gate (REQ-75, REQ-95)
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=itaca --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["itaca"]
